--- a/LucentDb.Web.UI/LucentDb.Web.UI.csproj
+++ b/LucentDb.Web.UI/LucentDb.Web.UI.csproj
@@ -221,6 +221,7 @@
     <Content Include="app\TestType\Index.js" />
     <Content Include="app\Test\details.js" />
     <Content Include="app\Test\Index.js" />
+    <Content Include="app\Test\edit.js" />
     <Content Include="App_Data\LucentDb.mdf" />
     <Content Include="App_Data\LucentDb_log.ldf">
       <DependentUpon>LucentDb.mdf</DependentUpon>
@@ -279,7 +280,6 @@
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <Content Include="Content\bootstrap-theme.css.map" />
     <Content Include="Content\bootstrap.css.map" />
-    <Content Include="index.html" />
     <Content Include="Scripts\angular-animate.js" />
     <Content Include="Scripts\angular-animate.min.js" />
     <Content Include="Scripts\angular-route.js" />
